cmake_minimum_required(VERSION 3.20)
include(${cpp_lib_build_scripts_path}/cmake-module/setup.cmake)
include(target_import_base)
include(target_import_freertos)
include(target_import_libstm32h743_hal)
include(target_import_bsp_interface)
include(target_import_task)

set(ProjectName atk-stm32h743-bsp)
project(${ProjectName})
enable_language(ASM)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_C_STANDARD 99)

add_library(${ProjectName})
target_import_src(${ProjectName})
target_import_libstm32h743_hal(${ProjectName} PRIVATE)
target_import_freertos(${ProjectName} PUBLIC)
target_import_base(${ProjectName} PUBLIC)
target_import_bsp_interface(${ProjectName} PUBLIC)
target_import_task(${ProjectName} PUBLIC)