cmake_minimum_required(VERSION 3.8)

if(1)
	get_filename_component(CURRENT_DIR_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
	set(ProjectName "${CURRENT_DIR_NAME}")

	include($ENV{cpp_lib_build_scripts_path}/cmake-module/setup.cmake)

	project(${ProjectName})
	enable_language(ASM)
	set(CMAKE_CXX_STANDARD 20)
	set(CMAKE_C_STANDARD 17)
endif()


include(target_import_stm32h743iit6_hal)
include(target_import_stm32h743iit6_interrupt)
include(target_import_stm32h743iit6_gpio)
include(target_import_stm32h743iit6_flash)
include(target_import_stm32h743iit6_timer)
include(target_import_stm32h743iit6_clock)
include(target_import_stm32h743iit6_dma)
include(target_import_stm32h743iit6_peripherals)
include(target_import_bsp_interface)
include(target_import_freertos)
include(target_import_base)
include(target_import_task)
include(target_import_freertos_osal)

add_library(${ProjectName})
target_import_src(${ProjectName})

target_import_stm32h743iit6_hal(${ProjectName} PUBLIC)
target_import_stm32h743iit6_interrupt(${ProjectName} PUBLIC)
target_import_stm32h743iit6_gpio(${ProjectName} PUBLIC)
target_import_stm32h743iit6_flash(${ProjectName} PUBLIC)
target_import_stm32h743iit6_timer(${ProjectName} PUBLIC)
target_import_stm32h743iit6_clock(${ProjectName} PUBLIC)
target_import_stm32h743iit6_dma(${ProjectName} PUBLIC)
target_import_stm32h743iit6_peripherals(${ProjectName} PUBLIC)
target_import_bsp_interface(${ProjectName} PUBLIC)
target_import_freertos(${ProjectName} PUBLIC)
target_import_base(${ProjectName} PUBLIC)
target_import_task(${ProjectName} PUBLIC)
target_import_freertos_osal(${ProjectName} PUBLIC)
